# secpat2gf

./: README.md  pyproject.toml  requirements.txt
secpat2gf/: __main__.py  secpat2gf.py
